--- a/index.html
+++ b/index.html
@@ -5,57 +5,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magisch Manifesteren - Stap in de stroom van je leven en ze zal je brengen waar je zijn moet</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="mouseFollow.js"></script>
-    <!-- <script src="sparkleDust.js"></script> -->
-    <!-- <script src="movingMirrors.js"></script> -->
-    <script src="sparkleClick.js"></script>
+    <link rel="stylesheet" href="./styles/homeStyle.css">
+    <title>Home</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href=""><img src="./images/logo-text.png" alt=""></a>
-            <ul>
-                <li>
-                    Magisch Manifesteren
-                </li>
-                <li>
-                    Blog
-                </li>
-                <li>
-                    Over mij
-                </li>
-                <button class="button margin-left">
-                    <span>Shop</span>
-                    <div class="light"></div>
-                  </button>
-                  <button class="button">
-                    <span>Contact</span>
-                    <div class="light"></div>
-                  </button>
-            </ul>
-        </nav>
-        <h1>Stap in de stroom van je leven <br> en ze zal je brengen waar je zijn moet</h1>
-        <a href="#content" class="scroll-down-container">
-            <p>Scroll down</p>
-            <div class="pulse"></div>
-        </a>
+        <h1>Frontend effects for header</h1>
     </header>
     <main>
-        <h2 id="content">Omdat het ook gemakkelijk mag</h2>
-        <p>Als je echt JA durft te zeggen tegen het leven en wie je bent (en 
-            dan ook alles!) dan gaat je leven stromen. Ervaar dat alles 
-            eenvoudiger gaat als jij het leven vol omarmt, je talenten leeft en 
-            met je stroom meegaat. Je zult je verbazen over het gemak en de 
-            overvloed die dan op jouw pad komen. Als je energie voluit kan 
-            stromen dan trek je mensen en situaties aan die op dezelfde 
-            frequentie zitten als jij. En dat is toch fijn!</p>
+        <section>
+            <article>
+                <h2>Mousemove</h2>
+                <ul>
+                    <li><a href="./pages/circleMouseMove.html">Circles</a></li>
+                    <li><a href="./pages/blob.html">Blob</a></li>
+                    <li><a href="./pages/shadow.html">Shadow</a></li>
+                </ul>
+            </article>
+            <article>
+                <h2>Background</h2>
+                <ul>
+                    <li><a href="./pages/twinklingStars.html">Twinkling stars</a></li>
+                    <li><a href="./pages/fireFly.html">Fire Fly</a></li>
+                    <li><a href="./pages/hyperSpeed.html">Hyper Speed</a></li>
+                </ul>
+            </article>
+            <article>
+                <h2>Scroll down</h2>
+                <ul>
+                    <li><a href="./pages/pulse.html">Pulse</a></li>
+                    <li><a href="./pages/circleScroll.html">Circle</a></li>
+                    <li><a href="./pages/bubble.html">Bubble</a></li>
+                </ul>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h2>Button 1</h2>
+                <div class="buttons-container">
+                    <div class="button-container-1">
+                        <span class="mas">Contact</span>
+                        <button id='work' type="button" name="Hover">Contact</button>
+                    </div>
+                    <div class="button-container-1">
+                        <span class="mas">Shop</span>
+                        <button id='work' type="button" name="Hover">Shop</button>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <h2>Button 2</h2>
+                <div class="buttons-container">
+                    <button class="button">
+                        <span>Shop</span>
+                        <div class="light"></div>
+                    </button>
+                    <button class="button">
+                        <span>Contact</span>
+                        <div class="light"></div>
+                    </button>
+                </div>
+            </article>
+            <article>
+                <h2>Button 3</h2>
+                <div class="buttons-container">
+                    <button class="button-3">Contact<span></span><span></span><span></span><span></span></button>
+                    <button class="button-3">Shop<span></span><span></span><span></span><span></span></button>
+                </div>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h2>Examples</h2>
+                <ul>
+                    <li><a href="./pages/header1.html">Header 1</a></li>
+                    <li><a href="./pages/header2.html">Header 2</a></li>
+                    <li><a href="">Header 3</a></li>
+                </ul>
+            </article>
+        </section>
     </main>
 </body>
 
