--- a/pages/circleMouseMove.html
+++ b/pages/circleMouseMove.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magisch Manifesteren - Stap in de stroom van je leven en ze zal je brengen waar je zijn moet</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="rotate.css">
+    <title>Circles - mouse move</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/circleMouseMove.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/circletype@2.3.0/dist/circletype.min.js"></script>
-    <script src="rotate"></script>
-    <script src="sparkleClick.js"></script>
+    <script src="../scripts/HBscript.js"></script>
+    <script src="../scripts/circleMouseMove.js"></script>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href=""><img src="./images/logo-text.png" alt=""></a>
+        <div class="mobile-header">
+            <!-- <a href=""><img src="../images/logo-text.png" alt="" class="logo"></a> -->
+            <p>MagischManifesteren</p>
+            <img src="../images/bars-solid.svg" alt="" onclick="toggleHB()">
+        </div>
+        <nav id="menu">
+            <img src="../images/xmark-solid.svg" alt="" onclick="toggleHB()" class="close">
+            <a href=""><img src="../images/logo-text.png" alt=""></a>
             <ul>
                 <li>
                     Magisch Manifesteren
@@ -42,15 +47,6 @@
             </ul>
         </nav>
         <h1>Stap in de stroom van je leven <br> en ze zal je brengen waar je zijn moet</h1>
-        <div class="scroll-wrapper">
-            <div class="scroll-container">
-                <div class="scroll-circle">
-                  <p id="text">&#8226; Scroll down &#8226; Scroll down &#8226; Scroll down &#8226; Scroll down &#8226; Scroll down</p>
-                </div>
-              </div>
-        </div>
-        
-          
     </header>
     <main>
         <h2 id="content">Omdat het ook gemakkelijk mag</h2>
@@ -62,16 +58,6 @@
             stromen dan trek je mensen en situaties aan die op dezelfde 
             frequentie zitten als jij. En dat is toch fijn!</p>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/circletype@2.3.0/dist/circletype.min.js"></script>
-
-  <script>
-    const text = document.getElementById('text')
-    const rotate = new CircleType(text).radius(50)
-
-    window.addEventListener('scroll', function(){
-      text.style.transform = 'rotate(' + (window.scrollY * 0.15) + 'deg)'
-    })
-  </script>
 </body>
 
 </html>
