--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <ul>
                     <li><a href="./pages/header1.html">Header 1</a></li>
                     <li><a href="./pages/header2.html">Header 2</a></li>
-                    <li><a href="">Header 3</a></li>
+                    <li><a href="./pages/header3.html">Header 3</a></li>
                 </ul>
             </article>
         </section>
