Added broken message

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="./pages/circleMouseMove.html">Circles</a></li>
                     <li><a href="./pages/blob.html">Blob</a></li>
-                    <li><a href="./pages/shadow.html">Shadow</a></li>
+                    <li><a href="./pages/shadow.html">Shadow (Broken on Pages)</a></li>
                 </ul>
             </article>
             <article>
