changed map structure and new header v2

--- a/pages/examples-1/header2.html
+++ b/pages/examples-1/header2.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header 2</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../styles/circleMouseMove.css">
-    <link rel="stylesheet" href="../styles/header2.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../styles/circleMouseMove.css">
+    <link rel="stylesheet" href="./header2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="../scripts/HBscript.js"></script>
-    <script src="../scripts/circleMouseMove.js"></script>
+    <script src="../../scripts/HBscript.js"></script>
+    <script src="../../scripts/circleMouseMove.js"></script>
 </head>
 
 <body>
@@ -22,11 +22,11 @@
         <div class="mobile-header">
             <!-- <a href=""><img src="../images/logo-text.png" alt="" class="logo"></a> -->
             <p>MagischManifesteren</p>
-            <img src="../images/bars-solid.svg" alt="" onclick="toggleHB()">
+            <img src="../../images/bars-solid.svg" alt="" onclick="toggleHB()">
         </div>
         <nav id="menu">
-            <img src="../images/xmark-solid.svg" alt="" onclick="toggleHB()" class="close">
-            <a href=""><img src="../images/logo-text.png" alt=""></a>
+            <img src="../../images/xmark-solid.svg" alt="" onclick="toggleHB()" class="close">
+            <a href=""><img src="../../images/logo-text.png" alt=""></a>
             <ul>
                 <li>
                     Magisch Manifesteren
