--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@
         </section>
         <section>
             <article>
-                <h2>Examples</h2>
+                <h2>Examples v1</h2>
                 <ul>
-                    <li><a href="./pages/header1.html">Header 1</a></li>
-                    <li><a href="./pages/header2.html">Header 2</a></li>
-                    <li><a href="./pages/header3.html">Header 3</a></li>
+                    <li><a href="./pages/examples-1/header1.html">Header 1</a></li>
+                    <li><a href="./pages/examples-1/header2.html">Header 2</a></li>
+                    <li><a href="./pages/examples-1/header3.html">Header 3</a></li>
+                </ul>
+            </article>
+            <article>
+                <h2>Examples v2</h2>
+                <ul>
+                    <li><a href="./pages/examples-2/header1.html">Header 1</a></li>
                 </ul>
             </article>
         </section>
