--- a/pages/examples-1/header1.html
+++ b/pages/examples-1/header1.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magisch Manifesteren - Stap in de stroom van je leven en ze zal je brengen waar je zijn moet</title>
-    <link rel="stylesheet" href="../styles/header1.css">
+    <link rel="stylesheet" href="./header1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="../scripts/blob.js" defer></script>
+    <script src="../../scripts/blob.js" defer></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <img src="../images/logo-text.png" alt="">
+            <img src="../../images/logo-text.png" alt="">
             <div class="menu-items">
                 <ul>
                     <li>Magisch manifesteren</li>
