--- a/pages/examples-1/header3.html
+++ b/pages/examples-1/header3.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fire Fly - background</title>
-    <link rel="stylesheet" href="../styles/fireFly.css">
-    <link rel="stylesheet" href="../styles/header3.css">
-    <script src="../scripts/fireFly.js" defer></script>
+    <link rel="stylesheet" href="../../styles/fireFly.css">
+    <link rel="stylesheet" href="./header3.css">
+    <script src="../../scripts/fireFly.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <img src="../images/logo-text.png" alt="">
+            <img src="../../images/logo-text.png" alt="">
             <div class="menu-items">
                 <ul>
                     <li>Magisch manifesteren</li>
