--- a/pages/examples-2/header1.html
+++ b/pages/examples-2/header1.html
@@ -16,9 +16,26 @@
 
 <body>
     <div class="blob"></div>
-  <div class="blob-mask"></div>
+    <div class="blob-mobile"></div>
+    <div class="blob-mask"></div>
     <header>
         <div class="background-color"></div>
+        <nav id="mobileNavbar">
+            <a href="#"><img src="../../images/beeldmerk.png" alt="" class="logo" width="50"></a>
+            <ul>
+                <li>Home</li>
+                <li>Aanbod</li>
+                <li>Blog</li>
+                <li>Over ons</li>
+                <li>Contact</li>
+            </ul>
+            <div class="hb-wrapper">
+                <p>Menu</p>
+                <div class="stars-wrapper">
+                    <img src="../../images/stars.svg" alt="" width="15px">
+                </div>
+            </div>
+        </nav>
         <nav id="hbNavbar">
             <a href="#"><img src="../../images/beeldmerk.png" alt="" class="logo" width="80"></a>
             <div class="hb-wrapper">
