--- a/pages/examples-2/header1.html
+++ b/pages/examples-2/header1.html
@@ -66,7 +66,7 @@
             <section class="hidden">
                 <p>Als je echt JA durft te zeggen tegen het leven en wie je bent (en dan ook alles!) dan gaat je
                     leven stromen. Ervaar dat alles eenvoudiger gaat als jij het leven vol omarmt, je talenten leeft
-                    en met je stroom meegaat. Je zult je verbazen over het gemak en de overvloed die dan op jouw pad
+                    en met je stroom meegaat. <br> Je zult je verbazen over het gemak en de overvloed die dan op jouw pad
                     komen. Als je energie voluit kan stromen dan trek je mensen en situaties aan die op dezelfde
                     frequentie zitten als jij. En dat is toch fijn!</p>
                 <img src="../../images/placeholder.jpg" alt="">
