--- a/pages/examples-2/header1.html
+++ b/pages/examples-2/header1.html
@@ -22,14 +22,14 @@
         <div class="background-color"></div>
         <nav id="mobileNavbar">
             <a href="#"><img src="../../images/beeldmerk.png" alt="" class="logo" width="50"></a>
-            <ul>
+            <ul id="hbMenu">
                 <li>Home</li>
                 <li>Aanbod</li>
                 <li>Blog</li>
                 <li>Over ons</li>
                 <li>Contact</li>
             </ul>
-            <div class="hb-wrapper">
+            <div onclick="moveMenu()" class="hb-wrapper">
                 <p>Menu</p>
                 <div class="stars-wrapper">
                     <img src="../../images/stars.svg" alt="" width="15px">
