--- a/pages/examples-2/header2.html
+++ b/pages/examples-2/header2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,43 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="./header2.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/LieutenantPeacock/SmoothScroll@1.2.0/src/smoothscroll.min.js" integrity="sha384-UdJHYJK9eDBy7vML0TvJGlCpvrJhCuOPGTc7tHbA+jHEgCgjWpPbmMvmd/2bzdXU" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <div class="blob"></div>
+    <div class="blob-mobile"></div>
+    <div class="blob-mask"></div>
     <header>
-        <div class="gradient"></div>
-        <nav>
-            <img src="../../images/logo-text.png" alt="" class="logo" width="200">
+        <div class="background-color"></div>
+        <nav id="mobileNavbar">
+            <a href="#"><img src="../../images/beeldmerk.png" alt="" class="logo" width="50"></a>
+            <ul id="hbMenu">
+                <li>Home</li>
+                <li>Aanbod</li>
+                <li>Blog</li>
+                <li>Over ons</li>
+                <li>Contact</li>
+            </ul>
+            <div onclick="moveMenu()" class="hb-wrapper">
+                <p>Menu</p>
+                <div class="stars-wrapper">
+                    <img src="../../images/stars.svg" alt="" width="15px">
+                </div>
+            </div>
+        </nav>
+        <nav id="hbNavbar">
+            <a href="#"><img src="../../images/beeldmerk.png" alt="" class="logo" width="80"></a>
+            <div class="hb-wrapper">
+                <p>Menu</p>
+                <div class="stars-wrapper">
+                    <img src="../../images/stars.svg" alt="" width="15px">
+                </div>
+            </div>
+        </nav>
+        <nav id="fullNavbar">
+            <a href="#"><img src="../../images/logo-with-text.png" alt="" class="logo" width="200"></a>
             <ul>
                 <li>Home</li>
                 <li>Aanbod</li>
@@ -23,14 +55,26 @@
                 <li>Contact</li>
             </ul>
         </nav>
-        <h1>Stap in de stroom van je leven ...</h1>
-        <div class="scroll-container">
-            <p>Scroll voor meer</p>
+        <h1>Stap in de stroom <br> van je leven ...</h1>
+        <div class="appear" id="appear">
+            <h1>...en ze zal je brengen waar je zijn moet</h1>
+        </div>
+        <div onclick="scrollDown()" class="scroll-container" id="scroll-container">
             <div class="bubble"></div>
+            <p>Scroll voor meer</p>
         </div>
     </header>
-    <main>
-        <h1>...en ze zal je brengen waar je zijn moet<h1>
+    <main id="content">
+        <h1 class="hidden">Als je echt JA durft te zeggen<h1>
+            <section class="hidden">
+                <p>Als je echt JA durft te zeggen tegen het leven en wie je bent (en dan ook alles!) dan gaat je
+                    leven stromen. Ervaar dat alles eenvoudiger gaat als jij het leven vol omarmt, je talenten leeft
+                    en met je stroom meegaat. <br> Je zult je verbazen over het gemak en de overvloed die dan op jouw pad
+                    komen. Als je energie voluit kan stromen dan trek je mensen en situaties aan die op dezelfde
+                    frequentie zitten als jij. En dat is toch fijn!</p>
+                <img src="../../images/placeholder.jpg" alt="">
+            </section>
     </main>
 </body>
+
 </html>
