--- a/pages/examples-2/header3.html
+++ b/pages/examples-2/header3.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./header3.css">
-    <script src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/SplitText3.min.js"></script>
-    <script src="https://assets.codepen.io/16327/Observer.min.js"></script>
-    <script src="./header3.js" defer></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./header3.css">
+  <script src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/SplitText3.min.js"></script>
+  <script src="https://assets.codepen.io/16327/Observer.min.js"></script>
+  <script src="./header3.js" defer></script>
 </head>
+
 <body>
-    <section class="first">
-        <div class="outer">
-          <div class="inner">
-            <div class="bg one">
-              <h2 class="section-heading">Stap in de stroom <br> van je leven ...</h2>
-            </div>
-          </div>
+  <section class="first">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg one">
+          <h2 class="section-heading">Stap in de stroom <br> van je leven ...</h2>
         </div>
-      
-      </section>
-      <section class="second">
-        <div class="outer">
-          <div class="inner">
-            <div class="bg">
-              <h2 class="section-heading">...en ze zal je brengen <br> waar je zijn moet</h2>
-            </div>
-          </div>
+      </div>
+    </div>
+
+  </section>
+  <section class="second">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">... en ze zal je brengen <br> waar je zjn moet</h2>
         </div>
-      </section>
+      </div>
+    </div>
+  </section>
+  <section class="third">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">Als je echt JA durft te zeggen</h2>
+          <div class="content">
+            <p>Als je echt JA durft te zeggen tegen het leven en wie je bent (en dan ook alles!) dan gaat je
+                leven stromen. Ervaar dat alles eenvoudiger gaat als jij het leven vol omarmt, je talenten leeft
+                en met je stroom meegaat. <br> Je zult je verbazen over het gemak en de overvloed die dan op jouw pad
+                komen. Als je energie voluit kan stromen dan trek je mensen en situaties aan die op dezelfde
+                frequentie zitten als jij. En dat is toch fijn!</p>
+            <img src="../../images/placeholder.jpg" alt="">
+        </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
+
 </html>
