Reveal on scroll examples v3

--- a/index.html
+++ b/index.html
@@ -88,8 +88,14 @@
                 <h2>Examples v2</h2>
                 <ul>
                     <li><a href="./pages/examples-2/header1.html">Header 1</a></li>
-                    <li><a href="./pages/examples-2/header2.html">Header 2</a></li>
-                    <li><a href="./pages/examples-2/header3.html">Header 3</a></li>
+                </ul>
+            </article>
+            <article>
+                <h2>Examples v3</h2>
+                <ul>
+                    <li><a href="./pages/examples-3/header1.html">Header 1</a></li>
+                    <li><a href="./pages/examples-3/header2.html">Header 2</a></li>
+                    <li><a href="./pages/examples-3/header3.html">Header 3</a></li>
                 </ul>
             </article>
         </section>
