--- a/pages/examples-3/header1.html
+++ b/pages/examples-3/header1.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./header1.css">
+    <link rel="stylesheet" href="./header2.css">
     <title>Magisch Manifesteren - Stap in de stroom van je leven en ze zal je brengen waar je zijn moet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <script src="./header1.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/gh/LieutenantPeacock/SmoothScroll@1.2.0/src/smoothscroll.min.js"
-        integrity="sha384-UdJHYJK9eDBy7vML0TvJGlCpvrJhCuOPGTc7tHbA+jHEgCgjWpPbmMvmd/2bzdXU"
-        crossorigin="anonymous"></script>
+    <script src="./header2.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/LieutenantPeacock/SmoothScroll@1.2.0/src/smoothscroll.min.js" integrity="sha384-UdJHYJK9eDBy7vML0TvJGlCpvrJhCuOPGTc7tHbA+jHEgCgjWpPbmMvmd/2bzdXU" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,6 +19,7 @@
     <div class="blob-mobile"></div>
     <div class="blob-mask"></div>
     <header>
+        <div class="background-color"></div>
         <nav id="mobileNavbar">
             <a href="#"><img src="../../images/beeldmerk.png" alt="" class="logo" width="50"></a>
             <ul id="hbMenu">
@@ -56,27 +55,24 @@
                 <li>Contact</li>
             </ul>
         </nav>
-        <div onclick="smoothScroll({yPos: 1000, duration: 750});" id="scroll-container" class="scroll-container">
+        <h1>Stap in de stroom <br> van je leven ...</h1>
+        <div class="appear" id="appear">
+            <h1>...en ze zal je brengen waar je zijn moet</h1>
+        </div>
+        <div onclick="scrollDown()" class="scroll-container" id="scroll-container">
             <div class="bubble"></div>
             <p>Scroll voor meer</p>
         </div>
-        <h1 class="dissolve">Stap in de stroom <br> van je leven ...</h1>
     </header>
-    <div class="wrapper">
-        <div class="background-color"></div>
-    </div>
     <main id="content">
-        <h1 class="reveal">...en ze zal je brengen waar je zijn moet</h1>
-        <h2 class="hidden">...en ze zal je brengen waar je zijn moet<h2>
-                <section class="hidden">
-                    <p>Als je echt JA durft te zeggen tegen het leven en wie je bent (en dan ook alles!) dan gaat je
-                        leven stromen. Ervaar dat alles eenvoudiger gaat als jij het leven vol omarmt, je talenten leeft
-                        en met je stroom meegaat. <br> Je zult je verbazen over het gemak en de overvloed die dan op
-                        jouw pad
-                        komen. Als je energie voluit kan stromen dan trek je mensen en situaties aan die op dezelfde
-                        frequentie zitten als jij. En dat is toch fijn!</p>
-                    <img src="../../images/placeholder.jpg" alt="">
-                </section>
+            <section class="hidden">
+                <p>Als je echt JA durft te zeggen tegen het leven en wie je bent (en dan ook alles!) dan gaat je
+                    leven stromen. Ervaar dat alles eenvoudiger gaat als jij het leven vol omarmt, je talenten leeft
+                    en met je stroom meegaat. <br> Je zult je verbazen over het gemak en de overvloed die dan op jouw pad
+                    komen. Als je energie voluit kan stromen dan trek je mensen en situaties aan die op dezelfde
+                    frequentie zitten als jij. En dat is toch fijn!</p>
+                <img src="../../images/placeholder.jpg" alt="">
+            </section>
     </main>
 </body>
 
